--- a/src/component/layout_component/card/card.css
+++ b/src/component/layout_component/card/card.css
@@ -22,6 +22,8 @@
 .div-card img {
     width: 100%;
     padding:15px;
+    object-fit: cover;
+    object-position: center;
 }
 .divcard-2{
     display: flex;
